# mednafen-highscore

highscore/: mednafen-highscore.cpp  mednafen-highscore.h  mednafen.highscore  meson.build  openemu
highscore/include/minilzo/: lzoconf.h  lzodefs.h  minilzo.h
highscore/include/trio/: trio.h  triodef.h  trionan.h  triop.h  triostr.h
highscore/shims/: driver.cpp  movie.cpp  netplay.cpp  qtrecord.cpp  tests.cpp
highscore/shims/cdrom/: CDAccess.cpp
highscore/shims/video/: text.cpp
src/: git.h
src/cdplay/: cdplay.cpp
src/demo/: demo.cpp
src/lynx/: system.cpp
src/ngp/: neopop.cpp
src/pce_fast/: pce.cpp
src/psx/: psx.cpp
src/ss/: ss.cpp
src/vb/: vb.cpp
src/wswan/: main.cpp
